new table created for cleans

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,11 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Mansalva&display=swap');
+
+.manor {
+  font-family: 'Mansalva', cursive;
+}
+
+.tasks {
+  background-color: #F3F1F1;
+  margin: 5px;
+}
