--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,10 @@
+<div class="booyah-box col-8 offset-2">
 <%= simple_form_for @task do |f| %>
-  <%= f.input :message %>
+  <%= f.input :spring %>
+  <%= f.input :summer %>
+  <%= f.input :fall %>
+  <%= f.input :winter %>
   <%= f.submit %>
 <% end %>
+</div>
+
