--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,11 @@
-<h1>New Task</h1>
+<div class="booyah-box col-8 offset-2">
+  <h1>Tasks</h1>
 
-<%= simple_form_for @task do |f| %>
-  <%= f.input :message %>
-  <%= f.submit "Add me to the list!" %>
-<% end %>
+  <%= simple_form_for @task do |f| %>
+    <%= f.input :spring %>
+    <%= f.input :summer %>
+    <%= f.input :fall %>
+    <%= f.input :winter %>
+    <%= f.submit "Add to My List" %>
+  <% end %>
+</div>
