passing tests for update action of cleans

--- a/app/views/cleans/new.html.erb
+++ b/app/views/cleans/new.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :summer %>
     <%= f.input :fall %>
     <%= f.input :winter %>
+    <%= f.input :message %>
     <%= f.submit "Add to My List" %>
   <% end %>
 </div>
