--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :summer %>
     <%= f.input :fall %>
     <%= f.input :winter %>
+    <%= f.input :message %>
     <%= f.submit "Add to My List" %>
   <% end %>
 </div>
