--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,26 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+
   </head>
 
   <body>
 
-<div class="manor text-center">
-  <h1>Manor Advisor</h1>
+<div class="manor col-8 offset-2">
+<%= link_to root_path do %>
+  <%= image_tag "manoradvisor.png" %>
+<% end %>
 </div>
+
 
 <div class="sign text-center">
       <% if current_user %>
-        You are signed in as <%= current_user.email %>.
-        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+          You are signed in as <%= current_user.email %>.
+          <%= link_to image_tag("out.png"), destroy_user_session_path, method: :delete %>
       <% else %>
-        <%= link_to "Sign In", new_user_session_path %>
-        <%= link_to "Sign Up", new_user_registration_path %>
+          <%= link_to image_tag("in.png"), new_user_session_path %>
+          <%= link_to image_tag("up.png"), new_user_registration_path %>
       <% end %>
 </div>
 
@@ -33,6 +38,8 @@
       <% if alert.present? %>
         <p class="alert alert-danger"><%= alert %></p>
       <% end %>
+
+      <%= link_to "Daily Cleans", daily_path %>
 
 
     <%= yield %>
