--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -15,3 +15,13 @@ label {
   max-width: 50px;
   max-height: 50px;
 }
+
+.row img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.task_suggestions img {
+  max-height: 100px;
+  max-width: 100px;
+}
