--- a/app/views/cleans/biannual.html.erb
+++ b/app/views/cleans/biannual.html.erb
@@ -1,17 +1,30 @@
-<div class="task_suggestions col-10 offset-1">
-  <h1>Biannual</h1>
-    <p>Clean Oven</p>
-    <p>Clean Lamp Shades</p>
-    <p>Sponge Clean Washable Upholstery</p>
-    <p>Wash/Dry-Clean Slip Covers</p>
-    <p>Launder/Dry-Clean Pillows</p>
-    <p>Wash Fabric Shades</p>
-    <p>Empty and Clean Cabinets<p>
-    <p>Scrub Tile Grout</p>
-    <p>Wash and Dry Filter of Stove Hood</p>
-<hr />
-  <h1>Annual</h1>
-    <p>Professionally Clean Rugs, Upholstery, Carpets, Floors</p>
-    <p>Wash Walls</p>
-    <p>Thoroughly Clean Pantry</p>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("6.png"), root_path %>
+        <h1>Biannual</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+        <p>Clean Oven</p>
+        <p>Clean Lamp Shades</p>
+        <p>Sponge Clean Washable Upholstery</p>
+        <p>Wash/Dry-Clean Slip Covers</p>
+        <p>Launder/Dry-Clean Pillows</p>
+        <p>Wash Fabric Shades</p>
+        <p>Empty and Clean Cabinets</p>
+        <p>Scrub Tile Grout</p>
+        <p>Wash and Dry Filter of Stove Hood</p>
+    </div>
+</div>
+<br />
+<hr class="col-10 offset-1" />
+<div class="row">
+    <div class="col-3 offset-1">
+        <h1>Annual</h1><input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+        <p>Professionally Clean Rugs, Upholstery, Carpets, Floors</p>
+        <p>Wash Walls</p>
+        <p>Thoroughly Clean Pantry</p>
+    </div>
 </div>
