--- a/app/views/cleans/daily.html.erb
+++ b/app/views/cleans/daily.html.erb
@@ -1,19 +1,26 @@
-<div class="task_suggestions col-10 offset-1">
-  <h1>Daily Cleans</h1>
-    <p>Make Bed</p>
-    <p>Dishes</p>
-    <p>Check Mail(Email)/Sort/Recycle</p>
-    <p>Pick Up Trash/Dispose</p>
-    <p>Collect/Organize Recycling</p>
-    <p>Compost</p>
-    <p>Wipe Kitchen Counters</p>
-    <p>Pay Bills</p>
-    <p>Tidy Up</p>
-    <p>Return Items to Proper Place</p>
-    <p>Answer Messages/Texts</p>
-    <p>Check Appointments/Schedule</p>
-    <p>Meal Planning</p>
-    <p>Cat Litter</p>
-    <p>Pet Food/Beverage Bowls</p>
-    <p>Walk Dog & Dog Walker</p>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("today.png"), root_path %>
+        <h1>Daily Tasks</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+        <p>Make Bed</p>
+        <p>Dishes</p>
+        <p>Check Mail(Email)/Sort/Recycle</p>
+        <p>Pick Up Trash/Dispose</p>
+        <p>Collect/Organize Recycling</p>
+        <p>Compost</p>
+        <p>Wipe Kitchen Counters</p>
+        <p>Pay Bills</p>
+        <p>Tidy Up</p>
+        <p>Return Items to Proper Place</p>
+        <p>Answer Messages/Texts</p>
+        <p>Check Appointments/Schedule</p>
+        <p>Meal Planning</p>
+        <p>Cat Litter</p>
+        <p>Pet Food/Beverage Bowls</p>
+        <p>Walk Dog & Dog Walker</p>
+        <p>Grocery Shop</p>
+    </div>
 </div>
