--- a/app/views/cleans/interval_cleans.html.erb
+++ b/app/views/cleans/interval_cleans.html.erb
@@ -1,38 +1,62 @@
-<div class="task_suggestions col-10 offset-1">
-  <h1>Weekly</h1>
-    <p>Dust Hard Surfaces</p>
-    <p>Sweep & Vacuum Flooring</p>
-    <p>Wipe Applicances</p>
-    <p>Wipe Counters</p>
-    <p>Scrub and Disinfect Toilets</p>
-    <p>Scrub and Disinfect Showers/Bathtubs</p>
-    <p>Launder Sheets</p>
-    <p>Check and Empty Garbage as Needed</p>
-    <p>Remove Lint Buildup from Trap/Hoses</p>
-    <p>Clean Sinks</p>
-    <p>Water Plants</p>
-    <p>Tidy Up</p>
-<hr />
-  <h1>Monthly</h1>
-    <p>Vacuum under furniture</p>
-    <p>Wipe and Disinfect Wastebaskets</p>
-    <p>Wipe and Disinfect Doorknobs</p>
-    <p>Wipe and Dust Ceiling Fans</p>
-    <p>Scrub Clean Stove Burner/Interior Microwave</p>
-    <p>Dust Moldings, Baseboards</p>
-    <p>Wipe Fronts of Cabinets</p>
-    <p>Clean Out Drains</p>
-    <p>Vacuum Furniture</p>
-    <p>Dust/Debug Light Fixtures</p>
-    <p>Vacuum Behind/Under Applicances</p>
-    <p>Replace Lightbulbs</p>
-    <p>Shake Rugs and Mats (Vacuum)</p>
-    <p>Toss Expired Foods in Fridge/Pantry/Cabinets/Shelves</p>
-    <p>Wash Windows</p>
-    <p>Clean Glass & Mirrors</p>
-<hr />
-  <h1>On Occasion</h1>
-    <p>Organize Closets/Cabinets</p>
-    <p>Purge Unused/Extra Material Items</p>
-    <p>Repot Plants</p>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("weekly.png"), root_path %>
+        <h1>Weekly</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+        <p>Dust Hard Surfaces</p>
+        <p>Sweep & Vacuum Flooring</p>
+        <p>Wipe Applicances</p>
+        <p>Wipe Counters</p>
+        <p>Scrub and Disinfect Toilets</p>
+        <p>Scrub and Disinfect Showers/Bathtubs</p>
+        <p>Launder Sheets</p>
+        <p>Check and Empty Garbage as Needed</p>
+        <p>Remove Lint Buildup from Trap/Hoses</p>
+        <p>Clean Sinks</p>
+        <p>Water Plants</p>
+        <p>Tidy Up</p>
+    </div>
 </div>
+<br />
+<hr class="col-10 offset-1" />
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <h1>Monthly</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+        <p>Vacuum under furniture</p>
+        <p>Wipe and Disinfect Wastebaskets</p>
+        <p>Wipe and Disinfect Doorknobs</p>
+        <p>Wipe and Dust Ceiling Fans</p>
+        <p>Scrub Clean Stove Burner/Interior Microwave</p>
+        <p>Dust Moldings, Baseboards</p>
+        <p>Wipe Fronts of Cabinets</p>
+        <p>Clean Out Drains</p>
+        <p>Vacuum Furniture</p>
+        <p>Dust/Debug Light Fixtures</p>
+        <p>Vacuum Behind/Under Applicances</p>
+        <p>Replace Lightbulbs</p>
+        <p>Shake Rugs and Mats (Vacuum)</p>
+        <p>Toss Expired Foods in Fridge/Pantry/Cabinets/Shelves</p>
+        <p>Wash Windows</p>
+        <p>Clean Glass & Mirrors</p>
+    </div>
+</div>
+<br />
+<hr class="col-10 offset-1" />
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <h1>On Occasion</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+        <p>Organize Closets/Cabinets</p>
+        <p>Purge Unused/Extra Material Items</p>
+        <p>Repot Plants</p>
+    </div>
+</div>
+<br />
+<br />
