--- a/app/views/tasks/fall.html.erb
+++ b/app/views/tasks/fall.html.erb
@@ -1,6 +1,11 @@
-<div class="task_suggestions col-10 offset-1">
-<h1 class="text-center">Fall</h1>
-         <p>Flush hot water heater and remove sediment.</p>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("leaves.png"), root_path %>
+        <h1>Fall</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+        <p>Flush hot water heater and remove sediment.</p>
         <p>Winterize air conditioning systems.</p>
         <p>Get heating system ready for winter.</p>
         <p>Check for leaks in windows and doors.</p>
@@ -24,4 +29,5 @@
         <p>For steam heating, get boiler checked and sediment drained. Get radiator valves checked.</p>
         <p>Have chimney cleaned and inspected.</p>
         <p>Indoor home improvement projects?</p>
+    </div>
 </div>
