--- a/app/views/tasks/home_lifespans.html.erb
+++ b/app/views/tasks/home_lifespans.html.erb
@@ -1,5 +1,9 @@
-
-<div class="task_suggestions col-10 offset-1">
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("lifespan.png"), root_path %>
+        <h1>Lifespans of Structures & Machines</h1>
+    </div>
+    <div class="task_suggestions col-6 offset-1">
   <h1>Nuts and Bolts</h1>
     <h2>10-15 Years</h2>
       <p>Automatic garage-door opener</p>
@@ -62,5 +66,6 @@
       <p>Tankless water heater</p>
     <h2>30 Years</h2>
       <p>Thermostat</p>
+  </div>
 </div>
 
