--- a/app/views/tasks/spring.html.erb
+++ b/app/views/tasks/spring.html.erb
@@ -1,5 +1,10 @@
-<div class="task_suggestions col-10 offset-1">
-      <h1 class="text-center">Spring</h1>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("spring.png"), root_path %>
+        <h1>Spring</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
         <p>Rake remaining leaves and debris from last fall/winter.</p>
         <p>Add thin layer of mulch to beds.</p>
         <p>Turn outside faucets back on - check for damage.</p>
@@ -24,4 +29,5 @@
         <p>Remove storm windows.</p>
         <p>Powerwash.</p>
         <p>If have pool/hottub, check valves and filters, inspect equipment/chemicals & service for new season.</p>
+    </div>
 </div>
