--- a/app/views/tasks/summer.html.erb
+++ b/app/views/tasks/summer.html.erb
@@ -1,5 +1,10 @@
-<div class="task_suggestions col-10 offset-1">
-   <h1 class="text-center">Summer</h1>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("sum.png"), root_path %>
+        <h1>Summer</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
         <p>Check grout in bathrooms, kitchen, etc. Repair as needed.</p>
         <p>Inspect plumbing for leaks, clean aerators on faucets.</p>
         <p>Take care of any insect problems.</p>
@@ -20,4 +25,5 @@
         <p>Establish emergency plan - evacuation, escape routes, emergency contacts.</p>
         <p>Watch for bug & pest infestations -> attics and basements.</p>
         <p>Conduct any outdoor home improvement projects.</p>
+    </div>
 </div>
