--- a/app/views/tasks/winter.html.erb
+++ b/app/views/tasks/winter.html.erb
@@ -1,6 +1,10 @@
-<div class="task_suggestions col-10 offset-1">
-      <hr />
-      <h1 class="text-center">Winter</h1>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("winter.png"), root_path %>
+        <h1>Winter</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
         <p>Regularly check for ice dams and iciciles.</p>
         <p>Test your electricity to the extent that you can - outlets, switches, & GFCI outlets.</p>
         <p>Tighten any handles, knobs, & racks - loose screws.</p>
@@ -16,5 +20,5 @@
         <p>Switch ceipng fans to turn clockwise.</p>
         <p>Check outdoor lightbulbs.</p>
         <p>Develop plan for next summer's home improvements.</p>
-
+    </div>
 </div>
