--- a/app/views/cleans/vinegar.html.erb
+++ b/app/views/cleans/vinegar.html.erb
@@ -1,29 +1,34 @@
-<div class="task_suggestions col-10 offset-1">
-  <h1>Vinegar for Cleaning</h1>
-    <h2>Window & Mirror Cleaner</h2>
-      <p>Spray bottle of undiluted vinegar. Wipe away with cloth.</p>
-    <h2>Carpet Stain Remover</h2>
-      <p>Sprinkle baking soda. Let sit 10-15 minutes. Vacuum. Mix 1 TBsp Vinegar + 1 TBsp Liquid Castile Soap (or mild detergent) with 1-2 Cups warm water. Wipe off with damp cloth.</p>
-    <h2>Mold Remover</h2>
-      <p>Spray with undiluted vinegar. Let sit. Give it a scrub. Rinse away.</p>
-    <h2>Stainless Steel Cleaner</h2>
-      <p>Undiluted vinegar spray.</p>
-    <h2>Tile</h2>
-      <p>Spray and wipe.</p>
-    <h2>Fabric Stain Removal</h2>
-      <p>Sponge stain with undiluted vinegar. Launder immediately. OR Use mild dish soap. Hand wash in cold water.</p>
-    <h2>Disinfect Toilet</h2>
-      <p>Pour 2 cups of undiluted vinegar into toilet and sit overnight.</p>
-    <h2>Clean Toilet</h2>
-      <p>Use equal parts baking soda and vinegar. Let it fizz then scrub.</p>
-    <h2>Whiten Grout</h2>
-      <p>Scrub with undiluted vinegar. Rinse with cool water.</p>
-    <h2>Frost Free Car Windows</h2>
-      <p>Spray with solution of 3 parts vinegar to 1 part water.</p>
-    <h2>Sanitize Computer Keyboard, Screen & Mouse/Trackpad</h2>
-      <p>Dampen cloth with undiluted vinegar and wipe.</p>
-    <h2>Deodorize Drains and Sinks</h2>
-      <p>Use 1/2 Cup baking soda and 1 Cup vinegar. Give it a scrub. Flush with hot tap water.</p>
-    <h2>All Purpose Cleaner</h2>
-      <p>Mix 1 part vinegar, 4 parts water, 1 tsp Dr. Bronner's Liquid Castile Soap and keep in a spray bottle. Can scent with 5-10 drops of essential oil.</p>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("vin.png"), root_path %>
+        <h1>Vinegar for Cleaning</h1>
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+      <h2>Window & Mirror Cleaner</h2>
+        <p>Spray bottle of undiluted vinegar. Wipe away with cloth.</p>
+      <h2>Carpet Stain Remover</h2>
+        <p>Sprinkle baking soda. Let sit 10-15 minutes. Vacuum. Mix 1 TBsp Vinegar + 1 TBsp Liquid Castile Soap (or mild detergent) with 1-2 Cups warm water. Wipe off with damp cloth.</p>
+      <h2>Mold Remover</h2>
+        <p>Spray with undiluted vinegar. Let sit. Give it a scrub. Rinse away.</p>
+      <h2>Stainless Steel Cleaner</h2>
+        <p>Undiluted vinegar spray.</p>
+      <h2>Tile</h2>
+        <p>Spray and wipe.</p>
+      <h2>Fabric Stain Removal</h2>
+        <p>Sponge stain with undiluted vinegar. Launder immediately. OR Use mild dish soap. Hand wash in cold water.</p>
+      <h2>Disinfect Toilet</h2>
+        <p>Pour 2 cups of undiluted vinegar into toilet and sit overnight.</p>
+      <h2>Clean Toilet</h2>
+        <p>Use equal parts baking soda and vinegar. Let it fizz then scrub.</p>
+      <h2>Whiten Grout</h2>
+        <p>Scrub with undiluted vinegar. Rinse with cool water.</p>
+      <h2>Frost Free Car Windows</h2>
+        <p>Spray with solution of 3 parts vinegar to 1 part water.</p>
+      <h2>Sanitize Computer Keyboard, Screen & Mouse/Trackpad</h2>
+        <p>Dampen cloth with undiluted vinegar and wipe.</p>
+      <h2>Deodorize Drains and Sinks</h2>
+        <p>Use 1/2 Cup baking soda and 1 Cup vinegar. Give it a scrub. Flush with hot tap water.</p>
+      <h2>All Purpose Cleaner</h2>
+        <p>Mix 1 part vinegar, 4 parts water, 1 tsp Dr. Bronner's Liquid Castile Soap and keep in a spray bottle. Can scent with 5-10 drops of essential oil.</p>
+    </div>
 </div>
