--- a/app/views/tasks/interval_tasks.html.erb
+++ b/app/views/tasks/interval_tasks.html.erb
@@ -1,26 +1,41 @@
-<div class="task_suggestions col-10 offset-1">
-  <div class="row">
-    <div class="intervals col-6">
-      <h1 class="text-center">Monthly</h1>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("interval.png"), root_path %>
+        <h1>Monthly Tasks</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
         <p>Inspect/possibly change out HVAC filters.</p><input type="date" id="start" name="trip-start">
         <p>Clean kitchen sink disposal.</p><input type="date" id="start" name="trip-start">
         <p>Clean range hood filters.</p><input type="date" id="start" name="trip-start">
         <p>Inspect fire extinguisher(s).</p><input type="date" id="start" name="trip-start">
     </div>
-    <div class="intervals col-6">
-      <h1 class="text-center">Quarterly</h1>
+</div>
+<br />
+<hr class="col-10 offset-1" />
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <h1>Quarterly Tasks</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
         <p>Test smoke/carbon dioxide detectors.</p><input type="date" id="start" name="trip-start">
         <p>Test garage door auto-reserve feature.</p><input type="date" id="start" name="trip-start">
         <p>Run water and flush toilets in unused places.</p><input type="date" id="start" name="trip-start">
         <p>Check water softener, add salt if needed.</p><input type="date" id="start" name="trip-start">
     </div>
-  </div>
 </div>
-<hr />
-<div class="task_suggestions col-8 offset-2">
-  <h1 class="text-center">Biannually</h1>
-    <p>Test your water heater's pressure relief valve.</p><input type="date" id="start" name="trip-start">
-    <p>Give your house a deep clean.</p><input type="date" id="start" name="trip-start">
-    <p>Replace batteries in smoke/carbon dioxide detectors.</p><input type="date" id="start" name="trip-start">
-    <p>Vacuum your refrigerator coils.</p><input type="date" id="start" name="trip-start">
+<br />
+<hr class="col-10 offset-1" />
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <h1>Biannual Tasks</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
+      <p>Test your water heater's pressure relief valve.</p><input type="date" id="start" name="trip-start">
+      <p>Give your house a deep clean.</p><input type="date" id="start" name="trip-start">
+      <p>Replace batteries in smoke/carbon dioxide detectors.</p><input type="date" id="start" name="trip-start">
+      <p>Vacuum your refrigerator coils.</p><input type="date" id="start" name="trip-start">
 </div>
+<br /><br />
