--- a/app/views/tasks/moving.html.erb
+++ b/app/views/tasks/moving.html.erb
@@ -1,5 +1,10 @@
-<div class="task_suggestions col-10 offset-1">
-      <h1>Change of Address Checklist</h1>
+<div class="row">
+    <div class="task_suggestions col-3 offset-1">
+        <%= link_to image_tag("else.png"), root_path %>
+        <h1>Change of Address Checklist</h1>
+         <input type="date" id="start" name="trip-start">
+    </div>
+    <div class="task_suggestions col-6 offset-1">
         <h2>Utilities</h2>
           <p>Electricity</p>
           <p>Gas</p>
@@ -27,15 +32,16 @@
           <p>Gyms</p>
           <p>Community Groups</p>
           <p>Other</p>
-        <h3>Services</h3>
+        <h2>Services</h2>
           <p>Home (Lawn, Delivery, Cleaning, etc)</p>
           <p>Childcare</p>
           <p>Doctors</p>
           <p>Lawyers</p>
           <p>Accountants</p>
           <p>Vet</p>
-        <h3>Other</h3>
+        <h2>Other</h2>
           <p>Business Cards</p>
           <p>Personal Sites</p>
           <p>Friends/Family</p>
+    </div>
 </div>
