--- a/app/views/tasks/summer.html.erb
+++ b/app/views/tasks/summer.html.erb
@@ -5,6 +5,7 @@
          <input type="date" id="start" name="trip-start">
     </div>
     <div class="task_suggestions col-6 offset-1">
+    <h3>Indoors</h3>
         <p>Check grout in bathrooms, kitchen, etc. Repair as needed.</p>
         <p>Inspect plumbing for leaks, clean aerators on faucets.</p>
         <p>Take care of any insect problems.</p>
@@ -15,12 +16,14 @@
         <p>Wax tile flooring/</p>
         <p>Check and clean dryer vent and other exhaust vents to exterior of home.</p>
         <p>Clean garbage container.</p>
+        <p>Reverse ceipng fans to counterclockwise - pushing air down.</p>
+        <p>Clean air conditioning filters once a month.</p>
+    <hr />
+    <h3>Out of Doors</h3>
         <p>Dig up weeds. Water plants. Deadhead flowers.</p>
         <p>Check sprinkler system, one head at a time. Get serviced if needed.</p>
         <p>Scrub pool once or twice a month to keep algae frowth under control. Check filter basket and chemicals weekly.</p>
         <p>If painting exterior, do it in summer.</p>
-        <p>Reverse ceipng fans to counterclockwise - pushing air down.</p>
-        <p>Clean air conditioning filters once a month.</p>
         <p>Prepare disaster supply kit - specific to potential in your area. Check weather stripping around windows and doors.</p>
         <p>Establish emergency plan - evacuation, escape routes, emergency contacts.</p>
         <p>Watch for bug & pest infestations -> attics and basements.</p>
