--- a/app/views/tasks/winter.html.erb
+++ b/app/views/tasks/winter.html.erb
@@ -5,7 +5,7 @@
          <input type="date" id="start" name="trip-start">
     </div>
     <div class="task_suggestions col-6 offset-1">
-        <p>Regularly check for ice dams and iciciles.</p>
+    <h3>Indoors</h3>
         <p>Test your electricity to the extent that you can - outlets, switches, & GFCI outlets.</p>
         <p>Tighten any handles, knobs, & racks - loose screws.</p>
         <p>Check all locks and deadbolts on doors and windows.</p>
@@ -13,12 +13,16 @@
         <p>Remove showerheads and clean sediment.</p>
         <p>Deep clean and inspect basement: mold, ,windows, foundation.</p>
         <p>Change heating filters once a month.</p>
-        <p>Insulate outdoor pipes.</p>
         <p>On colder days, keep cabinets below sink open to allow warm air to heat pipes.</p>
-        <p>Secure portable generator - make sure fuel doesn't sit for long periods.</p>
         <p>Stock for potential winter storm and closings.</p>
         <p>Switch ceipng fans to turn clockwise.</p>
+    <hr />
+    <h3>Out of Doors</h3>
+        <p>Regularly check for ice dams and iciciles.</p>
+        <p>Insulate outdoor pipes.</p>
+        <p>Secure portable generator - make sure fuel doesn't sit for long periods.</p>
         <p>Check outdoor lightbulbs.</p>
         <p>Develop plan for next summer's home improvements.</p>
     </div>
 </div>
+<br /><br />
