--- a/app/views/tasks/fall.html.erb
+++ b/app/views/tasks/fall.html.erb
@@ -5,18 +5,25 @@
          <input type="date" id="start" name="trip-start">
     </div>
     <div class="task_suggestions col-6 offset-1">
+    <h3>Indoors</h3>
         <p>Flush hot water heater and remove sediment.</p>
         <p>Winterize air conditioning systems.</p>
         <p>Get heating system ready for winter.</p>
         <p>Check for leaks in windows and doors.</p>
         <p>Turn off and flush outdoor water faucets.</p>
         <p>Get chimney cleaned, if you have one.</p>
-        <p>Test sump pump.</p>
+        <p>Get furnace and ductwork serviced. Check and replace air filters, test thermostat. Ensure heating vents are open.</p>
+        <p>Oil garage door tracks.</p>
+        <p>Add copper sulfate to basement floor drain and downspout drains to control tree roots in main sewer.</p>
+        <p>For steam heating, get boiler checked and sediment drained. Get radiator valves checked.</p>
+        <p>Have chimney cleaned and inspected.</p>
+        <p>Indoor home improvement projects?</p>
+<hr />
+    <h3>Out of Doors</h3>
         <p>Check driveway/pavement for cracks - can expand with water freezing.</p>
         <p>Patch and seal driveway and steps/landings.</p>
-        <p>Oil garage door tracks.</p>
         <p>Prune bushes, trees, and shrubs (exccept spring-flowering).</p>
-        <p>Add copper sulfate to basement floor drain and downspout drains to control tree roots in main sewer.</p>
+        <p>Test sump pump.</p>
         <p>Buy winter gear - shovels and salt at least.</p>
         <p>Plant perennials/trees.</p>
         <p>Rake leaves. Can mow over leaves once a week to break them down and provide nutrients.</p>
@@ -25,9 +32,6 @@
         <p>Stock up on firewood - keep covered & don't pack too tightly.</p>
         <p>Clean and close cover to pool for winter.</p>
         <p>Cover window A/C units and check seal for gaps OR remove from window and store upright.</p>
-        <p>Get furnace and ductwork serviced. Check and replace air filters, test thermostat. Ensure heating vents are open.</p>
-        <p>For steam heating, get boiler checked and sediment drained. Get radiator valves checked.</p>
-        <p>Have chimney cleaned and inspected.</p>
-        <p>Indoor home improvement projects?</p>
     </div>
 </div>
+<br /><br />
