--- a/app/views/tasks/interval_tasks.html.erb
+++ b/app/views/tasks/interval_tasks.html.erb
@@ -9,6 +9,7 @@
         <p>Clean kitchen sink disposal.</p><input type="date" id="start" name="trip-start">
         <p>Clean range hood filters.</p><input type="date" id="start" name="trip-start">
         <p>Inspect fire extinguisher(s).</p><input type="date" id="start" name="trip-start">
+        <p>Replace water filters.</p><input type="date" id="start" name="trip-start">
     </div>
 </div>
 <br />
