--- a/app/views/tasks/spring.html.erb
+++ b/app/views/tasks/spring.html.erb
@@ -8,7 +8,7 @@
         <h3>Plants</h3>
             <p>Rake remaining leaves and debris from last fall/winter.</p>
             <p>Add thin layer of mulch to beds.</p>
-            <p>Trim trees, bushes and shrubs (Wait until spring-flowering shrubs have finished blooming).</p>
+            <p>Trim trees, bushes and shrubs (wait until spring-flowering shrubs have finished blooming).</p>
             <p>Add copper sulfate to basement floor drain and downspout drains to control tree roots in main sewer.</p>
             <p>Clear/dead plants/shrubs/trees from house - especially vines.</p>
             <p>Check for interference with electric lines.</p>
