--- a/app/views/tasks/winter.html.erb
+++ b/app/views/tasks/winter.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="task_suggestions col-6 offset-1">
     <h3>Indoors</h3>
-        <p>Test your electricity to the extent that you can - outlets, switches, & GFCI outlets.</p>
+        <p>Test electricity - outlets, switches, & GFCI outlets.</p>
         <p>Tighten any handles, knobs, & racks - loose screws.</p>
         <p>Check all locks and deadbolts on doors and windows.</p>
         <p>Check caulking around showers and bathtubs; repair as needed.</p>
@@ -15,7 +15,7 @@
         <p>Change heating filters once a month.</p>
         <p>On colder days, keep cabinets below sink open to allow warm air to heat pipes.</p>
         <p>Stock for potential winter storm and closings.</p>
-        <p>Switch ceipng fans to turn clockwise.</p>
+        <p>Switch ceiling fans to turn clockwise.</p>
     <hr />
     <h3>Out of Doors</h3>
         <p>Regularly check for ice dams and iciciles.</p>
