--- a/app/views/tasks/summer.html.erb
+++ b/app/views/tasks/summer.html.erb
@@ -16,7 +16,7 @@
         <p>Wax tile flooring/</p>
         <p>Check and clean dryer vent and other exhaust vents to exterior of home.</p>
         <p>Clean garbage container.</p>
-        <p>Reverse ceipng fans to counterclockwise - pushing air down.</p>
+        <p>Reverse ceiling fans to counterclockwise - pushing air down.</p>
         <p>Clean air conditioning filters once a month.</p>
     <hr />
     <h3>Out of Doors</h3>
@@ -24,7 +24,7 @@
         <p>Check sprinkler system, one head at a time. Get serviced if needed.</p>
         <p>Scrub pool once or twice a month to keep algae frowth under control. Check filter basket and chemicals weekly.</p>
         <p>If painting exterior, do it in summer.</p>
-        <p>Prepare disaster supply kit - specific to potential in your area. Check weather stripping around windows and doors.</p>
+        <p>Prepare disaster supply kit. Check weather stripping around windows and doors.</p>
         <p>Establish emergency plan - evacuation, escape routes, emergency contacts.</p>
         <p>Watch for bug & pest infestations -> attics and basements.</p>
         <p>Conduct any outdoor home improvement projects.</p>
